# agave

./: .gitignore  .mergify.yml  .swp  AGENTS.md  AUDIT_REPORT.md  Aprobar.yml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUYENDO.md  Cargo.toml  LICENSE  README.md  RELEASE.md  RELEASE_NOTES.md  REPOSITORY_CONTENTS.md  SECURITY.md  SPELLCHECK.md  SPELLING.md  SUBMISSION_READY.md  _typos.toml  clippy.sh  clippy.toml  fetch-core-bpf.sh  fetch-perf-libs.sh  fetch-spl.sh  fix-spellcheck-system-ci.patch  flake.nix  nextest.toml  run.sh  taplo.toml  typos.toml  xdp_dz_integration_recap.md
.buildkite/: pipeline-upload.sh  solana-private.sh
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.config/: nextest.toml
.github/: CODEOWNERS  dependabot.yml
account-decoder/: Cargo.toml
account-decoder-client-types/: Cargo.toml
account-decoder/src/: core.rs  lib.rs  parse_account_data.rs  parse_address_lookup_table.rs  parse_bpf_loader.rs  parse_config.rs  parse_nonce.rs  parse_stake.rs  parse_sysvar.rs  parse_token.rs  parse_token_extension.rs  parse_validator_info.rs  parse_vote.rs  validator_info.rs
accounts-bench/: Cargo.toml
accounts-cluster-bench/: Cargo.toml
accounts-db/: CLAUDE.md  Cargo.toml
banking-bench/: Cargo.toml
banking-stage-ingress-types/: Cargo.toml
banks-client/: Cargo.toml
banks-interface/: Cargo.toml
banks-server/: Cargo.toml
bench-streamer/: Cargo.toml
bench-tps/: Cargo.toml
bench-tps/src/: bench.rs  bench_tps_client.rs  cli.rs  confirmations_processing.rs  lib.rs  log_transaction_service.rs  main.rs  perf_utils.rs  rpc_with_retry_utils.rs  send_batch.rs  tx_latency.rs
bench-tps/src/bench_tps_client/: bank_client.rs  high_tps_client.rs  rpc_client.rs  thin_client.rs  tpu_client.rs
bench-tps/tests/: bench_tps.rs
bench-tps/tps-client/: Cargo.toml
bench-tps/tps-client/src/: lib.rs  tpu_client.rs
bench-vote/: Cargo.toml
bloom/: Cargo.toml
bls-cert-verify/: Cargo.toml
bls-sigverify/: Cargo.toml
bls12-381/: Cargo.toml
bucket_map/: Cargo.toml
builtins/: Cargo.toml
builtins-default-costs/: Cargo.toml
builtins/src/: cost_modeling.rs  lib.rs  prototype.rs
cargo-registry/: Cargo.toml
ci/: buildkite-crates.yml  buildkite-pipeline.sh  buildkite-secondary.yml  buildkite-solana-private.sh  change-crate-deps.py  channel-info.sh  check-channel-version.sh  check-crates.sh  conformance-dispatch.sh  conformance-table.sh  do-audit.sh  docker-run.sh  env.sh  nits.sh  publish-crate.sh  publish-crates-layer.sh  publish-tarball.sh  run-sanity.sh  rust-version.sh  test-bench.sh  test-checks.sh  test-coverage.sh  test-dev-context-only-utils.sh  test-feature.sh  test-frozen-abi.sh  test-miri.sh  test-sanity.sh  test-shuttle.sh  test-stable.sh  test-verify-packets-gossip.sh  test-xdp.sh  upload-ci-artifact.sh
clap-utils/: Cargo.toml
clap-v3-utils/: Cargo.toml
cli/: Cargo.toml  build.rs
cli-bin/: Cargo.toml
cli-config/: Cargo.toml
cli-output/: Cargo.toml
client/: Cargo.toml
client-test/: Cargo.toml
clock-sync/: Cargo.toml
clock-sync/src/: clock.rs  delay.rs  launch.rs  lib.rs  protocol.rs  service.rs  stats.rs  welch_lynch.rs
clock-sync/tests/: convergence.rs
cluster-transport/: Cargo.toml
cluster-transport/src/: evicting_sender.rs  lib.rs  packet.rs  receiver.rs  staked_nodes.rs
compute-budget-instruction/: Cargo.toml
conformance/: Cargo.toml
conformance/src/: gossip.rs  lib.rs
conformance/src/gossip/: harness.rs  mod.rs
conformance/tests/gossip/: main.rs
core-bpf-migration/: Cargo.toml
core-bpf-migration/src/: callback.rs  config.rs  error.rs  lib.rs  prototypes.rs  source_buffer.rs  target_builtin.rs  target_core_bpf.rs
cpu-utils/: Cargo.toml
cpu-utils/examples/: basic_usage.rs  cpu_spinner.rs
cpu-utils/src/: affinity.rs  error.rs  lib.rs  topology.rs
cpu-utils/tests/: integration_test.rs
dev-bins/: Cargo.toml
dev-bins/high-severity-transaction-proofs/: Cargo.toml  README.md
dev-bins/high-severity-transaction-proofs/src/: main.rs
dev-bins/solana-defi-inventory/: Cargo.toml  README.md  protocols.example.csv
dev-bins/solana-defi-inventory/src/: main.rs
docs/: README.md  (+6 more)
echo-server/: Cargo.toml
echo-server/src/: ip_echo_client.rs  ip_echo_server.rs  lib.rs
faucet-bin/: Cargo.toml
faucet-bin/src/: main.rs
faucet-cli/: Cargo.toml
faucet-cli/src/: main.rs
faucet-interface/: Cargo.toml
faucet-interface/tests/: local-faucet.rs
fuzzer/: Cargo.toml  README.md  build.rs
fuzzer/.cargo/: config.toml
fuzzer/solfuzz-adapter/: Cargo.toml  README.md  build.rs
fuzzer/solfuzz-adapter/.cargo/: config.toml
fuzzer/solfuzz-adapter/proto/: vm.proto
fuzzer/solfuzz-adapter/tests/: self_test.c
fuzzer/src/: lib.rs  vm_syscalls.rs
fuzzer/tests/: self-test.rs  self_test.c
genesis/: Cargo.toml  README.md
genesis/src/: genesis_accounts.rs  lib.rs  main.rs  stakes.rs
geyser-consumer/: Cargo.toml
geyser-consumer/src/: main.rs
geyser-notifier/: Cargo.toml
geyser-notifier/src/: events.rs  lib.rs
geyser-shaq-queues/: Cargo.toml
geyser-shaq-queues/src/: lib.rs
instant/: Cargo.toml
instant/src/: lib.rs
kcp-client/: Cargo.toml
kcp-client/src/: kcp_client.rs.rs  lib.rs
kcp-client/src/nonblocking/: kcp_client.rs  mod.rs
leader-schedule/: Cargo.toml
leader-schedule/src/: lib.rs  vote_keyed.rs
loader/: Cargo.toml  config.json
loader/src/: main.rs
low-pass-filter/: Cargo.toml
low-pass-filter/src/: lib.rs
math-utils/: Cargo.toml
math-utils/src/: lib.rs  welford_stats.rs
measure/: Cargo.toml
measure/src/: macros.rs
memory-management/: Cargo.toml
memory-management/src/: jemalloc_monitor.rs  jemalloc_monitor_metrics.rs  lib.rs
memory-management/tests/: jemalloc_wrap.rs
mesh-layer/: Cargo.toml  README.md
mesh-layer/src/: dual_sender.rs  encoder.rs  lib.rs  mesh_packet.rs  service.rs
orchestrator/: Cargo.toml
orchestrator-bin/: Cargo.toml  README.md
orchestrator-bin/src/: args.rs  component.rs  control.rs  main.rs
orchestrator/src/: config.rs  lib.rs
orchestrator/src/unix/: mod.rs  scheduler.rs  shared.rs
(+2631 files in other folders)
