[package]
name = "solana-bench-tps"
publish = false
version = "4.1.0-alpha.0"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
description = "Blockchain, Rebuilt for Scale"
repository = "https://github.com/anza-xyz/agave"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
members = ["tps-client"]

[features]
default = ["agave-unstable-api"]
agave-unstable-api = []
dev-context-only-utils = []
dummy-for-ci-check = []
frozen-abi = []

[dependencies]
agave-logger = { version = "=4.0.0-beta.2", features = ["agave-unstable-api"] }
bincode = "1.3.3"
chrono = { version = "0.4.42", default-features = false }
clap = { version = "2.33.1", default-features = false, features = ["suggestions"] }
crossbeam-channel = "0.5.15"
csv = "1.4.0"
log = "0.4.28"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
solana-account = "3"
solana-clap-utils = { version = "=4.0.0-beta.2", features = ["agave-unstable-api"] }
solana-cli-config = "=4.0.0-beta.2"
solana-client = "=4.0.0-beta.2"
solana-clock = "3"
solana-commitment-config = "3"
solana-compute-budget-interface = "3"
solana-connection-cache = { version = "=4.0.0-beta.2", default-features = false, features = ["agave-unstable-api"] }
solana-core = { version = "=4.0.0-beta.2", features = ["agave-unstable-api", "dev-context-only-utils"] }
solana-fee-calculator = "3"
solana-genesis = { version = "=4.0.0-beta.2", features = ["agave-unstable-api"] }
solana-genesis-config = "3"
solana-hash = "3"
solana-instruction = "3"
solana-keypair = "3"
solana-measure = { version = "=4.0.0-beta.2", features = ["agave-unstable-api"] }
solana-message = "3"
solana-message-v4 = { package = "solana-message", version = "4" }
solana-metrics = { version = "=4.0.0-beta.2", features = ["agave-unstable-api"] }
solana-native-token = "3"
solana-net-utils = { version = "=4.0.0-beta.2", features = ["agave-unstable-api"] }
solana-nonce = "3"
solana-pubkey = "3"
solana-quic-client = { version = "=4.0.0-beta.2", features = ["agave-unstable-api"] }
solana-rpc = { version = "=4.0.0-beta.2", features = ["agave-unstable-api"] }
solana-rpc-client = { version = "=4.0.0-beta.2", default-features = false }
solana-rpc-client-api = "=4.0.0-beta.2"
solana-runtime = { version = "=4.0.0-beta.2", features = ["agave-unstable-api", "dev-context-only-utils"] }
solana-signature = "3"
solana-signer = "3"
solana-streamer = { version = "=4.0.0-beta.2", features = ["agave-unstable-api"] }
solana-system-interface = "3"
solana-time-utils = "3"
solana-tps-client = { path = "tps-client", features = ["agave-unstable-api"] }
solana-tpu-client = { version = "=4.0.0-beta.2", default-features = false, features = ["agave-unstable-api"] }
solana-transaction = "3"
solana-transaction-status = { version = "=4.0.0-beta.2", features = ["agave-unstable-api"] }
solana-transaction-v4 = { package = "solana-transaction", version = "4", features = ["wincode"] }
solana-version = { version = "=4.0.0-beta.2", features = ["agave-unstable-api"] }
spl-instruction-padding-interface = "=1.0.0"
wincode = "0.4.4"

[target.'cfg(not(any(target_env = "msvc", target_os = "freebsd")))'.dependencies]
jemallocator = { package = "tikv-jemallocator", version = "0.6.0", features = [
    "unprefixed_malloc_on_supported_platforms",
] }

[dev-dependencies]
agave-feature-set = { version = "=4.0.0-beta.2", features = ["agave-unstable-api"] }
serial_test = "3.2.0"
solana-faucet = { version = "=4.0.0-beta.2", features = ["agave-unstable-api", "dev-context-only-utils"] }
solana-local-cluster = { version = "=4.0.0-beta.2", features = ["agave-unstable-api"] }
solana-rent = "3"
solana-runtime = { version = "=4.0.0-beta.2", features = ["agave-unstable-api", "dev-context-only-utils"] }
solana-sdk-ids = "3"
solana-test-validator = "=4.0.0-beta.2"
solana-tps-client = { path = "tps-client", features = ["agave-unstable-api", "bank-client"] }
tempfile = "3.23.0"

[lints.rust]
boxed_slice_into_iter = "deny"
dependency_on_unit_never_type_fallback = "deny"
deprecated_safe_2024 = "deny"
impl_trait_overcaptures = "deny"
missing_unsafe_on_extern = "deny"
never_type_fallback_flowing_into_unsafe = "deny"
rust_2024_guarded_string_incompatible_syntax = "deny"
rust_2024_incompatible_pat = "deny"
rust_2024_prelude_collisions = "deny"
static_mut_refs = "deny"
unsafe_attr_outside_unsafe = "deny"
unsafe_op_in_unsafe_fn = "deny"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]

[lints.clippy]
arithmetic_side_effects = "deny"
default_trait_access = "deny"
manual_let_else = "deny"
used_underscore_binding = "deny"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package.curve25519-dalek]
opt-level = 3

[profile.full-dev]
inherits = "dev"
debug = "full"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
split-debuginfo = "off"

[profile.release]
split-debuginfo = "unpacked"
lto = "thin"

[profile.release-with-lto]
inherits = "release"
lto = "fat"
codegen-units = 1
