[package]
name = "solana-builtins"
description = "Solana builtin programs"
documentation = "https://docs.rs/solana-builtins"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
solana-program-runtime = { workspace = true }
solana-pubkey = { workspace = true }

[lints]
workspace = true
