[package]
name = "solana-core-bpf-migration"
description = "Solana migration of builtins to Core BPF"
documentation = "https://docs.rs/solana-core-bpf-migration"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
solana-account = { workspace = true }
solana-instruction = { workspace = true }
solana-program-runtime = { workspace = true }
solana-pubkey = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
