[package]
name = "solana-core-bpf-migration"
description = "Solana migration of builtins to Core BPF"
documentation = "https://docs.rs/solana-core-bpf-migration"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
dev-context-only-utils = []

[dependencies]
bincode = { workspace = true }
solana-account = { workspace = true }
solana-address-lookup-table-program = { workspace = true }
solana-bpf-loader-program = { workspace = true }
solana-compute-budget-program = { workspace = true }
solana-config-program = { workspace = true }
solana-feature-set = { workspace = true }
solana-instruction = { workspace = true }
solana-loader-v4-program = { workspace = true }
solana-program = { workspace = true }
solana-program-runtime = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-system-program = { workspace = true }
solana-stake-program = { workspace = true }
solana-vote-program = { workspace = true }
solana-zk-elgamal-proof-program = { workspace = true }
solana-zk-token-proof-program = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
solana-rent = { workspace = true }

[lints]
workspace = true
