[package]
name = "agave-cpu-utils"
description = "Agave CPU Utils"
version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = true

[dependencies]
libc = { workspace = true }
thiserror = { workspace = true }

[features]
agave-unstable-api = []

[dev-dependencies]
sha2 = { workspace = true }
